--- a/src/app/modules/drivers/layout/driver/driver.component.html
+++ b/src/app/modules/drivers/layout/driver/driver.component.html
@@ -1,3 +1,3 @@
-<app-page-header title="driver details"></app-page-header>
+<app-page-header title="driver"></app-page-header>
 <app-driver-constructor *ngIf="!isLoading" [type]="'driver'" [details]="details" [results]="results"></app-driver-constructor>
 <app-loader *ngIf="isLoading" class="driver-constructor"></app-loader>
