fix: Home page image src

--- a/src/app/modules/home/layout/home.component.html
+++ b/src/app/modules/home/layout/home.component.html
@@ -1,6 +1,6 @@
 <section>
   <div class="img-container">
-    <img src="../../../../assets/images/formula_one_cover.jpg" alt="">
+    <img src="assets/images/formula_one_cover.jpg" alt="">
     <div class="intro">
       <h1>Formula 1</h1>
       <p>Standings, races, schedule and much more</p>
