--- a/src/app/modules/standings/layout/standings.component.html
+++ b/src/app/modules/standings/layout/standings.component.html
@@ -1,6 +1,6 @@
 <app-season-filter></app-season-filter>
 <app-page-header title="standings"></app-page-header>
-<mat-tab-group color="primary" backgroundColor="accent" class="tabs">
+<mat-tab-group color="accent">
   <mat-tab label="Driver">
     <app-drivers-table></app-drivers-table>
   </mat-tab>
