--- a/src/app/shared/modules/season-filter/season-filter.component.html
+++ b/src/app/shared/modules/season-filter/season-filter.component.html
@@ -1,5 +1,5 @@
 <section>
-    <mat-form-field appearance="standard">
+    <mat-form-field appearance="standard" color="accent">
         <mat-label>Year</mat-label>
         <mat-select [formControl]="yearControl">
           <mat-option *ngFor="let year of years" [value]="year">
