--- a/src/app/shared/modules/page-header/page-header.component.scss
+++ b/src/app/shared/modules/page-header/page-header.component.scss
@@ -7,7 +7,7 @@ section:first-of-type {
 h1 {
   @include flex(row, nowrap, flex-start, flex-start);
   font-size: 1.5rem;
-  color: $white;
+  color: $accent;
   margin-bottom: 0;
 }
 
@@ -15,6 +15,7 @@ span {
   font-size: 1rem;
   margin-left: 1rem;
   padding: 0 0.5rem;
+  color: $white;
   background: $primary;
 }
 
@@ -28,7 +29,7 @@ span {
       background: #d62b47;
     }
     &:nth-child(even) {
-      background: white;
+      background: $lightGray;
     }
   }
 }
