refactor: Change back - forward button styles

--- a/src/app/components/back-forth-buttons/back-forth-buttons.component.scss
+++ b/src/app/components/back-forth-buttons/back-forth-buttons.component.scss
@@ -9,9 +9,8 @@ button {
   width: 80px;
   padding: 0.6rem 0;
   color: $white;
-  background: $lightAccent;
+  background: $accent;
   border: none;
-  border-radius: 20px !important;
   box-shadow: none !important;
   transition: .4s ease-in-out;
   cursor: pointer;
