--- a/src/app/modules/circuits/components/circuit-card/circuit-card.component.html
+++ b/src/app/modules/circuits/components/circuit-card/circuit-card.component.html
@@ -9,8 +9,12 @@
       <p>{{ circuit.Location.locality }} ({{ circuit.Location.country }})</p>
     </mat-card-content>
     <mat-card-footer>
-      <button mat-stroked-button (click)="showLocation(circuit.Location.lat, circuit.Location.long)">View on map</button>
-      <a [href]="circuit.url" target="_blank" rel="noreferrer">Wikipedia</a>
+      <a [href]="circuit.url" target="_blank" rel="noreferrer">
+        <img src="assets/images/wikipedia_logo.png" alt="Wikipedia logo" width="24" height="24">
+      </a>
+      <button mat-icon-button (click)="showLocation(circuit.Location.lat, circuit.Location.long)">
+        <mat-icon>map</mat-icon>
+      </button>
     </mat-card-footer>
   </mat-card>
 </article>
