refactor: Check for driver number existance

--- a/src/app/shared/modules/driver-constructor/components/driver-constructor/driver-constructor.component.html
+++ b/src/app/shared/modules/driver-constructor/components/driver-constructor/driver-constructor.component.html
@@ -11,7 +11,7 @@
         <h2>
             {{ type === 'constructor' ? (details && details.name) : (details && details.givenName + " " + details.familyName) }}
         </h2>
-        <p *ngIf="type === 'driver'" class="driver-number">{{ details && details.permanentNumber }}</p>
+        <p *ngIf="type === 'driver' && details.permanentNumber" class="driver-number">{{ details && details.permanentNumber }}</p>
         <a [href]="details && details.url" target="_blank" style="margin-left: auto">
           <img src="assets/images/wikipedia_logo.png" alt="Wikipedia logo" width="30" height="30">
         </a>
