--- a/src/assets/scss/_material-overwrites.scss
+++ b/src/assets/scss/_material-overwrites.scss
@@ -21,6 +21,14 @@
   margin-bottom: 1rem;
 }
 
+.mat-tab-label-content {
+  font-weight: bold;
+}
+
+.mat-table > thead > tr {
+  background: darken(#fff, 5%);
+}
+
 .mat-table > tbody > tr {
   cursor: pointer;
   transition: .4s ease-in-out;
