--- a/src/app/modules/circuits/components/circuit-card/circuit-card.component.html
+++ b/src/app/modules/circuits/components/circuit-card/circuit-card.component.html
@@ -3,18 +3,15 @@
     <mat-card-header>
       <mat-card-title>
         {{ circuit.circuitName | uppercase }}
+        <span>({{ circuit.Location.locality }} - {{ circuit.Location.country }})</span>
       </mat-card-title>
     </mat-card-header>
-    <mat-card-content>
-      <p>{{ circuit.Location.locality }} ({{ circuit.Location.country }})</p>
-    </mat-card-content>
     <mat-card-footer>
-      <a [href]="circuit.url" target="_blank" rel="noreferrer">
+      <a [href]="circuit.url" mat-stroked-button target="_blank" rel="noreferrer">
+        <span>See details on</span>
         <img src="assets/images/wikipedia_logo.png" alt="Wikipedia logo" width="24" height="24">
       </a>
-      <button mat-icon-button (click)="showLocation(circuit.Location.lat, circuit.Location.long)">
-        <mat-icon>map</mat-icon>
-      </button>
+      <button mat-stroked-button (click)="showLocation(circuit.Location.lat, circuit.Location.long)">View on map</button>
     </mat-card-footer>
   </mat-card>
 </article>
