--- a/src/app/modules/circuits/components/circuit-card/circuit-card.component.scss
+++ b/src/app/modules/circuits/components/circuit-card/circuit-card.component.scss
@@ -2,21 +2,27 @@
 
 .mat-card-title {
   margin-bottom: 0 !important;
+  span {
+    font-size: 1rem;
+  }
 }
 
 .mat-card-content {
   color: $accent;
+  margin-bottom: 12px;
+}
+
+a {
+  @include flex(row, nowrap, center, center);
   margin-bottom: .5rem;
+  img {
+    margin-left: .5rem;
+  }
 }
 
 .mat-card-footer {
-  @include flex(row, nowrap, flex-start, center);
-  padding-left: 16px;
-  a {
-    width: 24px;
-    height: 24px;
-  }
-  .mat-icon-button {
-    margin-left: .3rem;
+  padding: 0 16px;
+  button {
+    width: 100%;
   }
 }
