--- a/src/assets/scss/_reusable-classes.scss
+++ b/src/assets/scss/_reusable-classes.scss
@@ -5,7 +5,7 @@
 }
 
 .pad {
-    padding: 0 0 2.5rem 0;
+    padding: 2rem 0 2.5rem 0;
 }
 
 .grid {
@@ -113,10 +113,6 @@
 }
 
 @media(min-width: 1024px) {
-    .pad {
-        padding: 0 0 3rem 0;
-    }
-
     .grid {
         grid-template-columns: repeat(3, 1fr);
     }
@@ -142,10 +138,6 @@
 }
 
 @media(min-width: 1280px) {
-    .pad {
-      padding: 0 0 4rem 0;
-    }
-
     .grid {
         grid-template-columns: repeat(4, 1fr);
     }
