--- a/src/app/shared/modules/driver-constructor/components/driver-constructor/driver-constructor.component.scss
+++ b/src/app/shared/modules/driver-constructor/components/driver-constructor/driver-constructor.component.scss
@@ -25,7 +25,7 @@ h3 {
   margin-left: .5rem;
   padding: .5rem;
   color: $white;
-  background: $accent;
+  background: $primary;
 }
 
 .results-header {
