--- a/src/assets/scss/_reusable-classes.scss
+++ b/src/assets/scss/_reusable-classes.scss
@@ -34,7 +34,7 @@
   @include flex(row, nowrap, space-between, center);
   padding: 0.5rem;
   background: $lightGray;
-  border-radius: 0 0 10px 0;
+  border-radius: 0;
   border-right: 1px solid lighten($primary, 20%);
   border-bottom: 1px solid lighten($primary, 20%);
   color: $accent;
@@ -56,7 +56,7 @@
       background: $lightGray;
       border-right: 1px solid $primary;
       border-bottom: 1px solid $primary;
-      border-radius: 0 0 10px 0;
+      border-radius: 0;
       box-shadow: none;
     }
     .mat-card-header {
@@ -72,7 +72,7 @@
       top: -8px;
       right: -15px;
       width: 35px;
-      height: 30px;
+      height: 35px;
       color: $white;
       background: $accent;
     }
