--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,5 @@
 <footer>
+  <button (click)="goTop()">GO TOP</button>
   <p>Copyright &copy; 2022. All Rights Reserved.</p>
   <p>Special thanks to <a href="http://ergast.com/mrd/" target="_blank" rel="noreferrer">Ergast Developer API</a> for the data.</p>
 </footer>
