--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -5,6 +5,17 @@ footer {
   background: $primary;
 }
 
+button {
+  display: block;
+  font-weight: bold;
+  padding: .5rem;
+  margin: 0 auto .5rem auto;
+  color: $white;
+  background: $accent;
+  border: none;
+  cursor: pointer;
+}
+
 p {
     text-align: center;
     color: $white;
