refactor: Change layout on page header

--- a/src/app/shared/modules/page-header/page-header.component.html
+++ b/src/app/shared/modules/page-header/page-header.component.html
@@ -1,21 +1,4 @@
-<section>
-  <h1>
-    {{ title | uppercase }}
-    <span>
-      <ng-content></ng-content>
-    </span>
-  </h1>
-  <img src="assets/images/f1_racing_car_100.png" alt="">
-</section>
-<section class="road">
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-  <div></div>
-</section>
+<h1>{{ title | uppercase }}</h1>
+<span>
+  <ng-content></ng-content>
+</span>
