--- a/src/app/modules/constructors/layout/constructors/constructors.component.html
+++ b/src/app/modules/constructors/layout/constructors/constructors.component.html
@@ -1,5 +1,7 @@
 <app-season-filter></app-season-filter>
-<app-page-header title="constructors"></app-page-header>
+<app-page-header title="constructors">
+  {{ selectedYear }}
+</app-page-header>
 <ng-container *ngIf="!loading">
   <section class="grid constructors-drivers">
     <article *ngFor="let details of data" class="box" (click)="router.navigate(['/constructors', details['constructorId']])">
