--- a/src/app/modules/drivers/layout/drivers/drivers.component.html
+++ b/src/app/modules/drivers/layout/drivers/drivers.component.html
@@ -1,5 +1,7 @@
 <app-season-filter></app-season-filter>
-<app-page-header title="drivers"></app-page-header>
+<app-page-header title="drivers">
+  {{ selectedYear }}
+</app-page-header>
 <ng-container *ngIf="!loading">
   <section class="grid constructors-drivers">
     <article *ngFor="let details of data" class="box" (click)="router.navigate(['/drivers', details['driverId']])">
