refactor: Change layout of standings page

--- a/src/app/modules/standings/layout/standings.component.html
+++ b/src/app/modules/standings/layout/standings.component.html
@@ -1,6 +1,8 @@
-<app-season-filter></app-season-filter>
-<app-page-header title="standings"></app-page-header>
-<mat-tab-group color="primary">
+<div>
+  <app-page-header title="standings"></app-page-header>
+  <app-season-filter></app-season-filter>
+</div>
+<mat-tab-group color="primary" mat-align-tabs="center">
   <mat-tab label="Driver">
     <app-drivers-table></app-drivers-table>
   </mat-tab>
