--- a/src/assets/scss/_material-overwrites.scss
+++ b/src/assets/scss/_material-overwrites.scss
@@ -17,6 +17,10 @@
   background: #1f1f27;
 }
 
+.mat-tab-label {
+  min-width: 50% !important;
+}
+
 .mat-tab-label-container {
   margin-bottom: 1rem;
 }
