--- a/src/app/shared/modules/driver-constructor/components/driver-constructor/driver-constructor.component.scss
+++ b/src/app/shared/modules/driver-constructor/components/driver-constructor/driver-constructor.component.scss
@@ -1,16 +1,17 @@
 @import 'src/assets/scss/main';
 
-h2 {
+h1 {
   font-weight: bold;
-  margin-left: .5rem;
+  text-transform: uppercase;
+  margin: 0 0 0 .5rem;
   color: $accent;
 }
 
-h2, h3 {
+h1, h2 {
   min-width: 150px;
 }
 
-h3 {
+h2 {
   padding: 1rem .5rem;
   color: $accent;
   background: $lightGray;
