--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,8 +25,14 @@ body { margin: 0; font-family: 'Titillium Web', sans-serif; }
   background: lighten(#1f1f27, 30%);
 }
 
-h2 {
+h1 {
   font-size: 1.3rem !important;
+  color: #1f1f27;
+  margin-bottom: 0;
+}
+
+h2 {
+  font-size: 1.2rem !important;
 }
 
 h3 {
@@ -43,11 +49,15 @@ a {
 
 // Media
 @media(min-width: 768px){
+  h1 {
+    font-size: 1.5rem !important;
+  }
+
   h2 {
-    font-size: 1.6rem !important;
+    font-size: 1.4rem !important;
   }
 
   h3 {
-    font-size: 1.4rem !important;
+    font-size: 1.3rem !important;
   }
 }
