--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,7 @@
 <footer>
-  <button (click)="goTop()">GO TOP</button>
+  <button mat-raised-button color="accent" (click)="goTop()">
+    <mat-icon>keyboard_arrow_up</mat-icon>
+  </button>
   <p>Copyright &copy; 2022. All Rights Reserved.</p>
   <p>Special thanks to <a href="http://ergast.com/mrd/" target="_blank" rel="noreferrer">Ergast Developer API</a> for the data.</p>
 </footer>
