--- a/src/app/modules/home/layout/home.component.scss
+++ b/src/app/modules/home/layout/home.component.scss
@@ -17,8 +17,9 @@
   background: rgba(0, 0, 0, .6);
   z-index: 2;
   h1 {
-    font-size: 2.5rem;
+    font-size: 2.5rem !important;
     margin-bottom: 1rem;
+    color: $primary;
   }
   p {
     color: $white;
