refactor: Change driver and constructor box layout

--- a/src/app/modules/constructors/layout/constructors/constructors.component.html
+++ b/src/app/modules/constructors/layout/constructors/constructors.component.html
@@ -14,7 +14,7 @@
         </div>
         <span>{{ details['name'] }}</span>
       </section>
-      <mat-icon>keyboard_arrow_right</mat-icon>
+      <button mat-stroked-button color="accent">More</button>
     </article>
   </section>
 </ng-container>
