--- a/src/assets/scss/_material-overwrites.scss
+++ b/src/assets/scss/_material-overwrites.scss
@@ -58,7 +58,8 @@
   margin: 0 !important;
 }
 
-.mat-raised-button {
+.mat-raised-button,
+.mat-stroked-button {
   border-radius: 0 !important;
 }
 
