--- a/src/app/modules/drivers/components/driver-details/driver-details.component.html
+++ b/src/app/modules/drivers/components/driver-details/driver-details.component.html
@@ -1,1 +1,10 @@
-<p>driver-details works!</p>
+<h1 mat-dialog-title>{{ driver?.givenName }} {{ driver?.familyName }}</h1>
+<div mat-dialog-content>
+  <span>Date of birth: {{ driver?.dateOfBirth }}</span>
+  <span>Nationality: {{ driver?.nationality }}</span>
+  <span>Driver number: {{ driver?.permanentNumber }}</span>
+  <a [href]="driver?.url" target="_blank" rel="noreferrer">Wikipedia</a>
+</div>
+<div mat-dialog-actions align="center">
+  <button mat-stroked-button color="accent" mat-dialog-close>Close</button>
+</div>
