refactor: Replace noreferrer with noopener

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,5 +3,5 @@
     <mat-icon>keyboard_arrow_up</mat-icon>
   </button>
   <p>Copyright &copy; 2022. All Rights Reserved.</p>
-  <p>Special thanks to <a href="http://ergast.com/mrd/" target="_blank" rel="noreferrer">Ergast Developer API</a> for the data.</p>
+  <p>Special thanks to <a href="http://ergast.com/mrd/" target="_blank" rel="noopener">Ergast Developer API</a> for the data.</p>
 </footer>
