--- a/src/app/modules/circuits/components/circuit-card/circuit-card.component.html
+++ b/src/app/modules/circuits/components/circuit-card/circuit-card.component.html
@@ -7,7 +7,7 @@
       </mat-card-title>
     </mat-card-header>
     <mat-card-footer>
-      <a [href]="circuit.url" mat-stroked-button target="_blank" rel="noreferrer">
+      <a [href]="circuit.url" mat-stroked-button target="_blank" rel="noopener">
         <span>See details on</span>
         <img src="assets/images/wikipedia_logo.png" alt="Wikipedia logo" width="24" height="24">
       </a>
