--- a/src/app/modules/drivers/components/driver-details/driver-details.component.html
+++ b/src/app/modules/drivers/components/driver-details/driver-details.component.html
@@ -3,7 +3,7 @@
   <span>Date of birth: {{ driver.dateOfBirth }}</span>
   <span>Nationality: {{ driver.nationality }}</span>
   <span *ngIf="driver.permanentNumber">Driver number: {{ driver.permanentNumber }}</span>
-  <a [href]="driver.url" target="_blank" rel="noreferrer">Wikipedia</a>
+  <a [href]="driver.url" target="_blank" rel="noopener">Wikipedia</a>
 </div>
 <div mat-dialog-actions align="center">
   <button mat-stroked-button color="accent" mat-dialog-close>Close</button>
