--- a/src/app/modules/constructors/layout/constructors/constructors.component.html
+++ b/src/app/modules/constructors/layout/constructors/constructors.component.html
@@ -3,7 +3,7 @@
   {{ selectedYear }}
 </app-page-header>
 <ng-container *ngIf="!loading">
-  <section class="grid constructors-drivers">
+  <section *ngIf="data.length > 0" class="grid constructors-drivers">
     <article *ngFor="let details of data" class="box" (click)="openDetails(details['constructorId'])">
       <section class="image-name-container">
         <div class="img-container_constructors">
@@ -17,5 +17,7 @@
       <button mat-stroked-button color="accent">More</button>
     </article>
   </section>
+
+  <p *ngIf="data.length === 0" class="no-data">No data found</p>
 </ng-container>
 <app-loader *ngIf="loading"></app-loader>
