--- a/src/app/modules/constructors/components/constructor-details/constructor-details.component.html
+++ b/src/app/modules/constructors/components/constructor-details/constructor-details.component.html
@@ -1,8 +1,11 @@
-<h1 mat-dialog-title>{{ f1Constructor.name }}</h1>
-<div mat-dialog-content>
-  <span>Nationality: {{ f1Constructor.nationality }}</span>
-  <a [href]="f1Constructor.url" target="_blank" rel="noopener">Wikipedia</a>
-</div>
-<div mat-dialog-actions align="center">
-  <button mat-stroked-button color="accent" mat-dialog-close>Close</button>
-</div>
+<ng-container *ngIf="!loading">
+  <h1 mat-dialog-title>{{ f1Constructor.name }}</h1>
+  <div mat-dialog-content>
+    <span>Nationality: {{ f1Constructor.nationality }}</span>
+    <a [href]="f1Constructor.url" target="_blank" rel="noopener">Wikipedia</a>
+  </div>
+  <div mat-dialog-actions align="center">
+    <button mat-stroked-button color="accent" mat-dialog-close>Close</button>
+  </div>
+</ng-container>
+<mat-spinner *ngIf="loading" color="primary"></mat-spinner>
