--- a/src/assets/scss/_material-overwrites.scss
+++ b/src/assets/scss/_material-overwrites.scss
@@ -68,3 +68,9 @@
   border-radius: 0 !important;
   overflow-x: hidden !important;
 }
+
+.mat-progress-spinner {
+  top: 70px;
+  left: 50%;
+  transform: translateX(-50%);
+}
