refactor: Constructor and driver details styles

--- a/src/app/modules/constructors/components/constructor-details/constructor-details.component.html
+++ b/src/app/modules/constructors/components/constructor-details/constructor-details.component.html
@@ -5,7 +5,7 @@
     <a [href]="f1Constructor.url" target="_blank" rel="noopener">Wikipedia</a>
   </div>
   <div mat-dialog-actions align="center">
-    <button mat-stroked-button color="accent" mat-dialog-close>Close</button>
+    <button mat-flat-button color="accent" mat-dialog-close>Close</button>
   </div>
 </ng-container>
 <mat-spinner *ngIf="loading" color="primary"></mat-spinner>
