--- a/src/assets/scss/_details.scss
+++ b/src/assets/scss/_details.scss
@@ -3,8 +3,8 @@
 h1 {
   text-align: center;
   padding: 1rem 0;
-  color: $white;
-  background: $accent;
+  margin-bottom: 0.5rem;
+  color: $primary;
 }
 
 .mat-dialog-content {
