--- a/src/app/modules/drivers/components/driver-details/driver-details.component.html
+++ b/src/app/modules/drivers/components/driver-details/driver-details.component.html
@@ -7,7 +7,7 @@
     <a [href]="driver.url" target="_blank" rel="noopener">Wikipedia</a>
   </div>
   <div mat-dialog-actions align="center">
-    <button mat-stroked-button color="accent" mat-dialog-close>Close</button>
+    <button mat-flat-button color="accent" mat-dialog-close>Close</button>
   </div>
 </ng-container>
 <mat-spinner *ngIf="loading" color="primary"></mat-spinner>
