--- a/src/app/modules/constructors/layout/constructors/constructors.component.html
+++ b/src/app/modules/constructors/layout/constructors/constructors.component.html
@@ -4,7 +4,7 @@
 </app-page-header>
 <ng-container *ngIf="!loading">
   <section *ngIf="data.length > 0" class="grid constructors-drivers">
-    <article *ngFor="let details of data" class="box" (click)="openDetails(details['constructorId'])">
+    <article *ngFor="let details of data" class="box">
       <section class="image-name-container">
         <div class="img-container_constructors">
           <img *ngIf="imageExists(details); else noImage" src="assets/images/{{ details['constructorId'] }}.png" [alt]="details['name'] + ' logo'" width="30" height="30" />
@@ -14,7 +14,7 @@
         </div>
         <span>{{ details['name'] }}</span>
       </section>
-      <button mat-stroked-button color="accent">More</button>
+      <button mat-stroked-button color="accent" (click)="openDetails(details['constructorId'])">Info</button>
     </article>
   </section>
 
