--- a/src/app/modules/drivers/layout/drivers/drivers.component.html
+++ b/src/app/modules/drivers/layout/drivers/drivers.component.html
@@ -4,7 +4,7 @@
 </app-page-header>
 <ng-container *ngIf="!loading">
   <section *ngIf="data.length > 0" class="grid constructors-drivers">
-    <article *ngFor="let details of data" class="box" (click)="openDetails(details['driverId'])">
+    <article *ngFor="let details of data" class="box">
       <section class="image-name-container">
         <div class="img-container_drivers">
           <img *ngIf="imageExists(details); else noImage" src="assets/images/{{ details['driverId'] }}.png" [alt]="details['familyName'] + ' photo'" width="45" height="45" />
@@ -14,7 +14,7 @@
         </div>
         <span>{{ details['givenName'] + " " + details['familyName'] }}</span>
       </section>
-      <button mat-stroked-button color="accent">More</button>
+      <button mat-stroked-button color="accent" (click)="openDetails(details['driverId'])">Info</button>
     </article>
   </section>
 
