refactor: Change appearance of search

--- a/src/app/modules/standings/components/constructors-table/constructors-table.component.html
+++ b/src/app/modules/standings/components/constructors-table/constructors-table.component.html
@@ -1,8 +1,7 @@
 <section class="table">
   <ng-container *ngIf="!isLoading">
-    <mat-form-field appearance="standard">
-      <mat-label>Filter</mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="Search..." [(ngModel)]="filterValue" autocomplete="off">
+    <mat-form-field appearance="outline">
+      <input matInput (keyup)="applyFilter($event)" placeholder="Search for constructor" [(ngModel)]="filterValue" autocomplete="off">
     </mat-form-field>
 
     <section *ngIf="data.length > 0" class="mat-elevation-z8 table-container">
