--- a/src/app/modules/standings/components/constructors-table/constructors-table.component.html
+++ b/src/app/modules/standings/components/constructors-table/constructors-table.component.html
@@ -4,7 +4,7 @@
       <input matInput (keyup)="applyFilter($event)" placeholder="Search for constructor" [(ngModel)]="filterValue" autocomplete="off">
     </mat-form-field>
 
-    <section *ngIf="data.length > 0" class="mat-elevation-z8 table-container">
+    <section *ngIf="data.length > 0" class="table-container">
       <table mat-table [dataSource]="dataSource" matSort>
         <ng-container matColumnDef="position">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Position</th>
