--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,4 @@
-<footer>
-  <button mat-raised-button color="accent" (click)="goTop()">
-    <mat-icon>keyboard_arrow_up</mat-icon>
-  </button>
+<footer class="mat-elevation-z8">
   <p>Copyright &copy; 2022. All Rights Reserved.</p>
   <p>Special thanks to <a href="http://ergast.com/mrd/" target="_blank" rel="noopener">Ergast Developer API</a> for the data.</p>
 </footer>
