refactor: Replace info text with more

--- a/src/app/modules/constructors/layout/constructors/constructors.component.html
+++ b/src/app/modules/constructors/layout/constructors/constructors.component.html
@@ -14,7 +14,7 @@
         </div>
         <span>{{ details['name'] }}</span>
       </section>
-      <button mat-stroked-button color="accent" (click)="openDetails(details['constructorId'])">Info</button>
+      <button mat-stroked-button color="accent" (click)="openDetails(details['constructorId'])">More</button>
     </article>
   </section>
 
