--- a/src/app/modules/drivers/layout/drivers/drivers.component.html
+++ b/src/app/modules/drivers/layout/drivers/drivers.component.html
@@ -14,7 +14,7 @@
         </div>
         <span>{{ details['givenName'] + " " + details['familyName'] }}</span>
       </section>
-      <button mat-stroked-button color="accent" (click)="openDetails(details['driverId'])">Info</button>
+      <button mat-stroked-button color="accent" (click)="openDetails(details['driverId'])">More</button>
     </article>
   </section>
 
