refactor: Change the color of header and close button, remove background from h2

--- a/src/app/modules/circuits/components/circuit-location/circuit-location.component.scss
+++ b/src/app/modules/circuits/components/circuit-location/circuit-location.component.scss
@@ -5,8 +5,7 @@
 }
 
 h2 {
-    color: $white;
-    background: $accent;
+    color: $accent;
     padding: 1rem;
     margin-bottom: 0;
     line-height: 1.5rem;
@@ -17,7 +16,7 @@ button {
   top: .5rem;
   right: 1rem;
   mat-icon {
-    color: $white;
+    color: $accent;
   }
 }
 
