--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -5,7 +5,6 @@ footer {
 }
 
 p {
-  font-size: 1rem;
   text-align: center;
   color: $accent;
   &:first-of-type {
@@ -18,5 +17,11 @@ p {
     &:hover {
       color: $primary;
     }
+  }
+}
+
+@media(min-width: 960px) {
+  p {
+    font-size: 1rem;
   }
 }
