--- a/src/app/modules/home/layout/home.component.html
+++ b/src/app/modules/home/layout/home.component.html
@@ -6,7 +6,7 @@
       <p>Standings, races, schedule and much more</p>
     </div>
   </div>
-  <h2>DRIVER STANDINGS</h2>
+  <h2>DRIVER STANDINGS<mat-icon matTooltip="Driver standings refer to the season in progress">info</mat-icon></h2>
   <div class="placements">
     <ng-container *ngIf="!isDriverStatsLoading">
       <app-placement *ngFor="let driver of topDrivers; let i = index"
@@ -16,7 +16,7 @@
     </ng-container>
     <app-loader *ngIf="isDriverStatsLoading"></app-loader>
   </div>
-  <h2>CONSTRUCTOR STANDINGS</h2>
+  <h2>CONSTRUCTOR STANDINGS<mat-icon matTooltip="Constructor standings refer to the season in progress">info</mat-icon></h2>
   <div class="placements">
     <ng-container *ngIf="!isConstructorStatsLoading">
       <app-placement *ngFor="let constructor of topConstructors; let i = index"
