refactor: Change the layout of page header component, pass selected year as an input, remove styles from standings component and add queries for h1 element

--- a/src/app/modules/circuits/layout/circuits.component.html
+++ b/src/app/modules/circuits/layout/circuits.component.html
@@ -1,4 +1,4 @@
-<app-page-header title="circuits">{{ currentYear }}</app-page-header>
+<app-page-header title="circuits" [year]="currentYear"></app-page-header>
 <section class="grid" *ngIf="!isLoading">
     <app-circuit-card *ngFor="let circuit of circuits" [circuit]="circuit"></app-circuit-card>
 </section>
