--- a/src/app/modules/schedule/layout/schedule.component.html
+++ b/src/app/modules/schedule/layout/schedule.component.html
@@ -1,4 +1,4 @@
-<app-page-header title="schedule">{{ currentYear }}</app-page-header>
+<app-page-header title="schedule" [year]="currentYear"></app-page-header>
 <p class="info">
   <mat-icon>info</mat-icon>
   Rounds listed below refer to the date of the race
