--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,6 +29,7 @@ body {
 
 h1 {
   font-size: 1.3rem !important;
+  font-weight: bold !important;
   color: #1f1f27;
   margin-bottom: 0;
 }
@@ -65,5 +66,17 @@ app-standings app-season-filter section {
 
   h3 {
     font-size: 1.3rem !important;
+  }
+}
+
+@media(min-width: 960px) {
+  h1 {
+    font-size: 1.7rem !important;
+  }
+}
+
+@media(min-width: 1280px) {
+  h1 {
+    font-size: 1.9rem !important;
   }
 }
